--- a/Untitled.html
+++ b/Untitled.html
@@ -1755,8 +1755,8 @@ Copy + Img w/ CTA End */ -->
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#ffffff;background-color:#ffffff;width:100%;">
         <tbody>
           <tr>
-            <td style="border-left:1px lightgrey solid;border-right:1px lightgrey solid;direction:ltr;font-size:0px;padding:20px;text-align:center;">
-              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:558px;" ><![endif]-->
+            <td style="border-left:1px lightgrey solid;border-right:1px lightgrey solid;direction:ltr;font-size:0px;padding:20px 0;padding-bottom:15px;text-align:center;">
+              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:598px;" ><![endif]-->
               <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
                 <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                   <tbody>
@@ -1776,7 +1776,7 @@ Copy + Img w/ CTA End */ -->
                   </tbody>
                 </table>
               </div>
-              <!--[if mso | IE]></td><td class="" style="vertical-align:top;width:279px;" ><![endif]-->
+              <!--[if mso | IE]></td><td class="" style="vertical-align:top;width:299px;" ><![endif]-->
               <div class="mj-column-per-50 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
                 <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                   <tbody>
@@ -1785,7 +1785,7 @@ Copy + Img w/ CTA End */ -->
                         <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
                           <tbody>
                             <tr>
-                              <td align="right" vertical-align="middle" style="font-size:0px;padding:10px;word-break:break-word;">
+                              <td align="center" vertical-align="middle" style="font-size:0px;padding:10px;word-break:break-word;">
                                 <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:separate;width:90%;line-height:100%;">
                                   <tr>
                                     <td align="center" bgcolor="#FF8100" role="presentation" style="border:none;border-radius:4px;cursor:auto;mso-padding-alt:12px 20px;background:#FF8100;" valign="middle">
