--- a/Untitled.html
+++ b/Untitled.html
@@ -1940,73 +1940,96 @@ Copy + Img w/ CTA End */ -->
     </div>
     <!--[if mso | IE]></td></tr></table><![endif]-->
     <!-- /* Content Block 22. Left Monthly Newsletter End */ -->
-    <!-- /* Content Block 23. Monthly Newsletter */ -->
+    <!-- /* Content Block 24. Event Confirmation */ -->
     <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     <div style="background:#ffffff;background-color:#ffffff;margin:0px auto;max-width:600px;">
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#ffffff;background-color:#ffffff;width:100%;">
         <tbody>
           <tr>
             <td style="border-left:1px lightgrey solid;border-right:1px lightgrey solid;direction:ltr;font-size:0px;padding:20px 0;padding-bottom:10px;padding-top:10px;text-align:center;">
-              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="width:598px;" ><![endif]-->
-              <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0;line-height:0;text-align:left;display:inline-block;width:100%;direction:ltr;">
-                <!--[if mso | IE]><table border="0" cellpadding="0" cellspacing="0" role="presentation" ><tr><td style="vertical-align:top;width:394px;" ><![endif]-->
-                <div class="mj-column-per-66 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:66%;">
-                  <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
-                    <tbody>
-                      <tr>
-                        <td style="vertical-align:top;padding-top:10px;">
-                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
-                            <tbody>
-                              <tr>
-                                <td align="left" style="font-size:0px;padding:0px 20px 20px 20px;padding-top:10px;padding-bottom:10px;word-break:break-word;">
-                                  <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:16px;line-height:1.5;text-align:left;color:#000000;">
-                                    <p>氣候 / 應對氣候危機，亞洲晉身進擊的巨人</p>
-                                  </div>
-                                </td>
-                              </tr>
-                              <tr>
-                                <td align="left" class="mobHide" style="font-size:0px;padding:0px 20px 20px 20px;padding-bottom:10px;word-break:break-word;">
-                                  <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:14px;line-height:1.5;text-align:left;color:#000000;">
-                                    <p>當科學家費煞思量探索海洋萬米深淵的奧秘，早有企業聞風而至攻佔地盤。</p>
-                                  </div>
-                                </td>
-                              </tr>
-                            </tbody>
-                          </table>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-                <!--[if mso | IE]></td><td style="vertical-align:top;width:197px;" ><![endif]-->
-                <div class="mj-column-per-33 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:33%;">
-                  <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
-                    <tbody>
-                      <tr>
-                        <td style="vertical-align:top;padding-right:0px;padding-left:0px;">
-                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
-                            <tbody>
-                              <tr>
-                                <td align="center" style="font-size:0px;padding:10px 25px;padding-top:10px;padding-right:0px;padding-bottom:10px;padding-left:20px;word-break:break-word;">
-                                  <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
-                                    <tbody>
-                                      <tr>
-                                        <td style="width:177px;">
-                                          <img alt="ACT NOW" height="auto" src="https://via.placeholder.com/560x560.png?text=200x200+Retina+Image" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="177" />
-                                        </td>
-                                      </tr>
-                                    </tbody>
-                                  </table>
-                                </td>
-                              </tr>
-                            </tbody>
-                          </table>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-                <!--[if mso | IE]></td></tr></table><![endif]-->
+              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:598px;" ><![endif]-->
+              <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
+                  <tbody>
+                    <tr>
+                      <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
+                          <tbody>
+                            <tr>
+                              <td style="width:48px;">
+                                <img alt="" height="auto" src="https://www.greenpeace.org/static/planet4-hongkong-stateless/2021/02/8213fc79-icons8-calendar.gif" style="border:none;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="48" />
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td align="center" style="font-size:0px;padding:0px 20px 20px 20px;padding-bottom:0px;word-break:break-word;">
+                        <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:20px;font-weight:bold;line-height:1.5;text-align:center;color:#000000;">
+                          <p>2021年2月27日 星期六</p>
+                          <p>11am- 12pm</p>
+                        </div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td align="center" style="font-size:0px;padding:10px 25px;padding-top:8px;padding-bottom:30px;word-break:break-word;">
+                        <p style="border-top:solid 1px lightgrey;font-size:1px;margin:0px auto;width:100%;">
+                        </p>
+                        <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" style="border-top:solid 1px lightgrey;font-size:1px;margin:0px auto;width:548px;" role="presentation" width="548px" ><tr><td style="height:0;line-height:0;"> &nbsp;
+</td></tr></table><![endif]-->
+                      </td>
+                    </tr>
+                    <tr>
+                      <td align="center" style="font-size:0px;padding:0px 20px 20px 20px;padding-bottom:20px;word-break:break-word;">
+                        <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:16px;line-height:1.5;text-align:center;color:#000000;">
+                          <p>這是您進入Zoom線上分享會的個人鏈結。<br /> 密碼將於活動當天透過電郵和短訊傳送給你。<br /> 如欲邀請好友參加是次活動，請分享此訪客報名鏈結。</p>
+                        </div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td align="left" style="font-size:0px;padding:0px 20px 20px 20px;padding-top:10px;padding-bottom:10px;word-break:break-word;">
+                        <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:14px;line-height:1.5;text-align:left;color:#000000;">為確保您的網絡安全及活動順利舉行，請注意以下事項： <ul>
+                            <li>請勿將個人鏈結公開，或傳給陌生人</li>
+                            <li>請先下載應用程式（<a href="https://itunes.apple.com/us/app/id546505307" target="_blank" style="color:#074365; text-decoration:underline;">IOS</a>、<a href="https://play.google.com/store/apps/details?id=us.zoom.videomeetings" target="_blank" style="color:#074365; text-decoration:underline;">Android</a>、<a href="https://zoom.us/client/latest/Zoom.pkg" target="_blank" style="color:#074365; text-decoration:underline;">電腦</a>）</li>
+                            <li>活動將準時於早上11時正開始，請提早3-5分鐘進入Zoom</li>
+                            <li>活動將會被錄影</li>
+                            <li>活動設有問答環節，如欲發問，請在「Chat」中舉手示意，待主持示意後再發言 </li>
+                          </ul>
+                        </div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td align="center" style="font-size:0px;padding:10px 25px;padding-top:8px;padding-bottom:30px;word-break:break-word;">
+                        <p style="border-top:solid 1px lightgrey;font-size:1px;margin:0px auto;width:100%;">
+                        </p>
+                        <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" style="border-top:solid 1px lightgrey;font-size:1px;margin:0px auto;width:548px;" role="presentation" width="548px" ><tr><td style="height:0;line-height:0;"> &nbsp;
+</td></tr></table><![endif]-->
+                      </td>
+                    </tr>
+                    <tr>
+                      <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
+                          <tbody>
+                            <tr>
+                              <td style="width:48px;">
+                                <img alt="" height="auto" src="https://www.greenpeace.org/static/planet4-hongkong-stateless/2021/02/d8d6e645-icons8-calendar-80.png" style="border:none;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="48" />
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td align="center" style="font-size:0px;padding:0px 20px 20px 20px;padding-bottom:0px;word-break:break-word;">
+                        <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:20px;font-weight:bold;line-height:1.5;text-align:center;color:#000000;">
+                          <p>2021年2月27日 星期六</p>
+                          <p>11am- 12pm</p>
+                        </div>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
               </div>
               <!--[if mso | IE]></td></tr></table><![endif]-->
             </td>
@@ -2015,7 +2038,7 @@ Copy + Img w/ CTA End */ -->
       </table>
     </div>
     <!--[if mso | IE]></td></tr></table><![endif]-->
-    <!-- /* Content Block 23. Left Monthly Newsletter End */ -->
+    <!-- /* Content Block 24. Event Confirmation End */ -->
     <!-- Footer Start -->
     <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     <div style="background:#ffffff;background-color:#ffffff;margin:0px auto;max-width:600px;">
