updated newsletter block

--- a/Untitled.html
+++ b/Untitled.html
@@ -231,8 +231,8 @@ Copy Start */ -->
 Copy End */ -->
     <!-- /* Content Block 1. Hero Image Start */ -->
     <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-    <div style="background:#000000;background-color:#000000;margin:0px auto;max-width:600px;">
-      <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#000000;background-color:#000000;width:100%;">
+    <div style="margin:0px auto;max-width:600px;">
+      <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
         <tbody>
           <tr>
             <td style="border-left:1px lightgrey solid;border-right:1px lightgrey solid;direction:ltr;font-size:0px;padding:0px;text-align:center;">
@@ -241,7 +241,7 @@ Copy End */ -->
                 <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
                   <tbody>
                     <tr>
-                      <td align="center" style="font-size:0px;padding:0px;word-break:break-word;">
+                      <td align="center" style="font-size:0px;padding:0px;padding-bottom:20px;word-break:break-word;">
                         <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
                           <tbody>
                             <tr>
@@ -519,7 +519,7 @@ Copy w/ Headline End */ -->
                           <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
                             <tbody>
                               <tr>
-                                <td align="center" style="font-size:0px;padding:10px 25px;padding-top:5px;padding-right:10px;padding-bottom:0px;padding-left:20px;word-break:break-word;">
+                                <td align="center" style="font-size:0px;padding:10px 25px;padding-top:4px;padding-right:10px;padding-bottom:0px;padding-left:20px;word-break:break-word;">
                                   <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
                                     <tbody>
                                       <tr>
@@ -532,7 +532,7 @@ Copy w/ Headline End */ -->
                                 </td>
                               </tr>
                               <tr>
-                                <td align="left" style="font-size:0px;padding:0px 20px 20px 20px;word-break:break-word;">
+                                <td align="left" style="font-size:0px;padding:0px 20px 20px 20px;padding-top:10px;word-break:break-word;">
                                   <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:16px;font-weight:bold;line-height:1.5;text-align:left;color:#000000;">Single Column Copy Bold 16pt</div>
                                 </td>
                               </tr>
@@ -570,7 +570,7 @@ Copy w/ Headline End */ -->
                                 </td>
                               </tr>
                               <tr>
-                                <td align="left" style="font-size:0px;padding:0px 20px 20px 20px;padding-left:10px;word-break:break-word;">
+                                <td align="left" style="font-size:0px;padding:0px 20px 20px 20px;padding-top:10px;padding-left:10px;word-break:break-word;">
                                   <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:16px;font-weight:bold;line-height:1.5;text-align:left;color:#000000;">Single Column Copy Bold 16pt</div>
                                 </td>
                               </tr>
@@ -1625,7 +1625,7 @@ Copy + Img w/ CTA End */ -->
                                 <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:separate;width:180px;line-height:100%;">
                                   <tr>
                                     <td align="center" bgcolor="#4267B2" role="presentation" style="border:none;border-radius:4px;cursor:auto;mso-padding-alt:12px 20px;background:#4267B2;" valign="middle">
-                                      <a href="https://www.greenpeace.org/eastasia/" style="display:inline-block;width:140px;background:#4267B2;color:#ffffff;font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:16px;font-weight:bold;line-height:1.5;margin:0;text-decoration:none;text-transform:none;padding:12px 20px;mso-padding-alt:0px;border-radius:4px;" target="_blank"> Facebook 分享 </a>
+                                      <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.greenpeace.org/eastasia/" style="display:inline-block;width:140px;background:#4267B2;color:#ffffff;font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:16px;font-weight:bold;line-height:1.5;margin:0;text-decoration:none;text-transform:none;padding:12px 20px;mso-padding-alt:0px;border-radius:4px;" target="_blank"> Facebook 分享 </a>
                                     </td>
                                   </tr>
                                 </table>
@@ -1651,7 +1651,7 @@ Copy + Img w/ CTA End */ -->
                                 <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:separate;width:180px;line-height:100%;">
                                   <tr>
                                     <td align="center" bgcolor="#25d366" role="presentation" style="border:none;border-radius:4px;cursor:auto;mso-padding-alt:12px 20px;background:#25d366;" valign="middle">
-                                      <a href="https://www.greenpeace.org/eastasia/" style="display:inline-block;width:140px;background:#25d366;color:#ffffff;font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:16px;font-weight:bold;line-height:1.5;margin:0;text-decoration:none;text-transform:none;padding:12px 20px;mso-padding-alt:0px;border-radius:4px;" target="_blank"> Whatsapp 分享 </a>
+                                      <a href="https://api.whatsapp.com/send?text=https://www.greenpeace.org/eastasia/" style="display:inline-block;width:140px;background:#25d366;color:#ffffff;font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:16px;font-weight:bold;line-height:1.5;margin:0;text-decoration:none;text-transform:none;padding:12px 20px;mso-padding-alt:0px;border-radius:4px;" target="_blank"> Whatsapp 分享 </a>
                                     </td>
                                   </tr>
                                 </table>
@@ -1712,7 +1712,7 @@ Copy + Img w/ CTA End */ -->
                                 <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:separate;width:180px;line-height:100%;">
                                   <tr>
                                     <td align="center" bgcolor="#4267B2" role="presentation" style="border:none;border-radius:4px;cursor:auto;mso-padding-alt:12px 20px;background:#4267B2;" valign="middle">
-                                      <a href="https://www.greenpeace.org/eastasia/" style="display:inline-block;width:140px;background:#4267B2;color:#ffffff;font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:16px;font-weight:bold;line-height:1.5;margin:0;text-decoration:none;text-transform:none;padding:12px 20px;mso-padding-alt:0px;border-radius:4px;" target="_blank"> Facebook 分享 </a>
+                                      <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.greenpeace.org/eastasia/" style="display:inline-block;width:140px;background:#4267B2;color:#ffffff;font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:16px;font-weight:bold;line-height:1.5;margin:0;text-decoration:none;text-transform:none;padding:12px 20px;mso-padding-alt:0px;border-radius:4px;" target="_blank"> Facebook 分享 </a>
                                     </td>
                                   </tr>
                                 </table>
@@ -1845,8 +1845,12 @@ Copy + Img w/ CTA End */ -->
                               <td align="center" style="font-size:0px;padding:0px 20px 20px 20px;word-break:break-word;">
                                 <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:16px;line-height:1.5;text-align:center;color:#000000;">
                                   <p>整裝待發迎接2021年的，當然還有綠色和平項目團隊！邀請你填寫3分鐘問卷發表寶貴意見，我們定必細心聆聽，並按此調整來年項目方向，同時讓活動規劃及會員服務更貼近你的需求，一起實現更多為地球許下的願望。</p>
-                                  <a href="http://greenpeace.org" target="_blank">填寫3分鐘項目問卷</a>
                                 </div>
+                              </td>
+                            </tr>
+                            <tr>
+                              <td align="center" style="font-size:0px;padding:0px 20px 20px 20px;word-break:break-word;">
+                                <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:16px;line-height:1.5;text-align:center;color:#000000;"><a href="http://greenpeace.org" target="_blank">填寫3分鐘項目問卷</a></div>
                               </td>
                             </tr>
                           </tbody>
@@ -1882,12 +1886,12 @@ Copy + Img w/ CTA End */ -->
                           <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
                             <tbody>
                               <tr>
-                                <td align="center" style="font-size:0px;padding:10px 25px;padding-top:10px;padding-right:0px;padding-bottom:10px;padding-left:20px;word-break:break-word;">
+                                <td align="center" style="font-size:0px;padding:10px 25px;padding-top:10px;padding-right:0px;padding-left:20px;word-break:break-word;">
                                   <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
                                     <tbody>
                                       <tr>
                                         <td style="width:177px;">
-                                          <img alt="ACT NOW" height="auto" src="https://via.placeholder.com/560x560.png?text=200x200+Retina+Image" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="177" />
+                                          <img height="auto" src="https://via.placeholder.com/560x560.png?text=200x200+Retina+Image" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="177" />
                                         </td>
                                       </tr>
                                     </tbody>
@@ -1903,28 +1907,27 @@ Copy + Img w/ CTA End */ -->
                 </div>
                 <!--[if mso | IE]></td><td style="vertical-align:top;width:394px;" ><![endif]-->
                 <div class="mj-column-per-66 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:66%;">
-                  <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                  <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
                     <tbody>
                       <tr>
-                        <td style="vertical-align:top;padding-top:4px;">
-                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
-                            <tbody>
-                              <tr>
-                                <td align="left" style="font-size:0px;padding:0px 20px 20px 20px;padding-top:10px;padding-bottom:10px;word-break:break-word;">
-                                  <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:16px;line-height:1.5;text-align:left;color:#000000;">
-                                    <p>氣候 / 應對氣候危機，亞洲晉身進擊的巨人</p>
-                                  </div>
-                                </td>
-                              </tr>
-                              <tr>
-                                <td align="left" class="mobHide" style="font-size:0px;padding:0px 20px 20px 20px;padding-bottom:10px;word-break:break-word;">
-                                  <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:14px;line-height:1.5;text-align:left;color:#000000;">
-                                    <p>當科學家費煞思量探索海洋萬米深淵的奧秘，早有企業聞風而至攻佔地盤。</p>
-                                  </div>
-                                </td>
-                              </tr>
-                            </tbody>
-                          </table>
+                        <td align="left" style="font-size:0px;padding:0px 20px 20px 20px;padding-bottom:0px;word-break:break-word;">
+                          <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:16px;line-height:1.5;text-align:left;color:#000000;">
+                            <p>氣候 / 應對氣候危機，亞洲晉身進擊的巨人</p>
+                          </div>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td align="left" class="mobHide" style="font-size:0px;padding:0px 20px 20px 20px;padding-top:0px;padding-bottom:0px;word-break:break-word;">
+                          <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:14px;line-height:1.5;text-align:left;color:#000000;">
+                            <p>當科學家費煞思量探索海洋萬米深淵的奧秘，早有企業聞風而至攻佔地盤。</p>
+                          </div>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td align="left" style="font-size:0px;padding:0px 20px 20px 20px;padding-top:0px;padding-bottom:0px;word-break:break-word;">
+                          <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:14px;line-height:1.5;text-align:left;color:#000000;">
+                            <p><a href="http://greenpeace.org" target="_blank">[閱讀更多]</a></p>
+                          </div>
                         </td>
                       </tr>
                     </tbody>
