--- a/Untitled.html
+++ b/Untitled.html
@@ -389,12 +389,12 @@ w/ Text CTA Link Left Aligned Start */ -->
                     </tr>
                     <tr>
                       <td align="left" style="font-size:0px;padding:0px 20px 20px 20px;padding-bottom:10px;word-break:break-word;">
-                        <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:16px;font-weight:bold;line-height:1.5;text-align:left;color:#074365;"><a href="https://www.greenpeace.org/eastasia/" target="_blank" style="color:#074365; text-decoration:underline; font-weight: bold"> > Call to action</a></div>
+                        <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:16px;font-weight:bold;line-height:1.5;text-align:left;color:#074365;"><a href="https://www.greenpeace.org/eastasia/" target="_blank"> Call to action</a></div>
                       </td>
                     </tr>
                     <tr>
                       <td align="left" style="font-size:0px;padding:0px 20px 20px 20px;padding-bottom:10px;word-break:break-word;">
-                        <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:16px;line-height:1.5;text-align:left;color:#074365;"><a href="https://www.greenpeace.org/eastasia/" target="_blank" style="color:#074365; text-decoration:underline; font-weight: bold"> > Call to action</a></div>
+                        <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:16px;line-height:1.5;text-align:left;color:#074365;"><a href="https://www.greenpeace.org/eastasia/" target="_blank"> Call to action</a></div>
                       </td>
                     </tr>
                   </tbody>
@@ -2042,6 +2042,87 @@ Copy + Img w/ CTA End */ -->
     </div>
     <!--[if mso | IE]></td></tr></table><![endif]-->
     <!-- /* Content Block 24. Event Confirmation End */ -->
+    <!-- /* Content Block 25. YES NO */ -->
+    <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+    <div style="background:#ffffff;background-color:#ffffff;margin:0px auto;max-width:600px;">
+      <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#ffffff;background-color:#ffffff;width:100%;">
+        <tbody>
+          <tr>
+            <td style="border-left:1px lightgrey solid;border-right:1px lightgrey solid;direction:ltr;font-size:0px;padding:20px 0;padding-bottom:10px;padding-top:10px;text-align:center;">
+              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="width:598px;" ><![endif]-->
+              <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0;line-height:0;text-align:left;display:inline-block;width:100%;direction:ltr;">
+                <!--[if mso | IE]><table border="0" cellpadding="0" cellspacing="0" role="presentation" ><tr><td style="vertical-align:top;width:299px;" ><![endif]-->
+                <div class="mj-column-per-50 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:50%;">
+                  <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                    <tbody>
+                      <tr>
+                        <td style="vertical-align:top;padding:10px;">
+                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
+                            <tbody>
+                              <tr>
+                                <td align="center" vertical-align="middle" style="font-size:0px;padding:10px 20px 10px 20px;word-break:break-word;">
+                                  <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:separate;width:90%;line-height:100%;">
+                                    <tr>
+                                      <td align="center" bgcolor="#f96d8c" role="presentation" style="border:none;border-radius:4px;cursor:auto;mso-padding-alt:16px 20px;background:#f96d8c;" valign="middle">
+                                        <a href="https://www.greenpeace.org/eastasia/" style="display:inline-block;background:#f96d8c;color:#ffffff;font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:20px;font-weight:bold;line-height:1.5;margin:0;text-decoration:none;text-transform:none;padding:16px 20px;mso-padding-alt:0px;border-radius:4px;" target="_blank"> Yes </a>
+                                      </td>
+                                    </tr>
+                                  </table>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td align="center" class="lrPad20" style="font-size:0px;padding:0px 20px 20px 20px;padding-top:4px;word-break:break-word;">
+                                  <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:14px;line-height:1.5;text-align:center;color:#666666;">立即登記</div>
+                                </td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <!--[if mso | IE]></td><td style="vertical-align:top;width:299px;" ><![endif]-->
+                <div class="mj-column-per-50 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:50%;">
+                  <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                    <tbody>
+                      <tr>
+                        <td style="vertical-align:top;padding:10px;">
+                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
+                            <tbody>
+                              <tr>
+                                <td align="center" vertical-align="middle" style="font-size:0px;padding:10px 20px 10px 20px;word-break:break-word;">
+                                  <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:separate;width:90%;line-height:100%;">
+                                    <tr>
+                                      <td align="center" bgcolor="#ffffff" role="presentation" style="border:1px solid #f96d8c;border-radius:4px;cursor:auto;mso-padding-alt:16px 20px;background:#ffffff;" valign="middle">
+                                        <a href="https://www.greenpeace.org/eastasia/" style="display:inline-block;background:#ffffff;color:#f96d8c;font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:20px;font-weight:bold;line-height:1.5;margin:0;text-decoration:none;text-transform:none;padding:16px 20px;mso-padding-alt:0px;border-radius:4px;" target="_blank"> No </a>
+                                      </td>
+                                    </tr>
+                                  </table>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td align="center" class="lrPad20" style="font-size:0px;padding:0px 20px 20px 20px;padding-top:4px;word-break:break-word;">
+                                  <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:14px;line-height:1.5;text-align:center;color:#666666;">未能出席<br />但願意支持守護北極項目</div>
+                                </td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <!--[if mso | IE]></td></tr></table><![endif]-->
+              </div>
+              <!--[if mso | IE]></td></tr></table><![endif]-->
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <!--[if mso | IE]></td></tr></table><![endif]-->
+    <!-- /* Content Block 25. YES NO */ -->
     <!-- Footer Start -->
     <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     <div style="background:#ffffff;background-color:#ffffff;margin:0px auto;max-width:600px;">
