--- a/Untitled.html
+++ b/Untitled.html
@@ -192,7 +192,7 @@ Copy Start */ -->
     <!--[if mso | IE]></td></tr></table><![endif]-->
     <!-- /* Content Block 0. Single Column Center Align
 Copy End */ -->
-    <!-- /* Content Block 1. Hero Image Start */ -->
+    <!-- /* Content Block 1a. Hero Image with border Start */ -->
     <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     <div style="margin:0px auto;max-width:600px;">
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
@@ -204,13 +204,13 @@ Copy End */ -->
                 <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
                   <tbody>
                     <tr>
-                      <td align="center" style="font-size:0px;padding:0px;word-break:break-word;">
+                      <td align="center" style="font-size:0px;padding:1px;word-break:break-word;">
                         <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
                           <tbody>
                             <tr>
-                              <td style="width:598px;">
+                              <td style="width:596px;">
                                 <a href="https://www.greenpeace.org/eastasia/" target="_blank">
-                                  <img alt="Greenpeace" height="auto" src="https://via.placeholder.com/1200x400.png?text=1200x400+Retina+Image" style="border:none;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" title width="598">
+                                  <img alt="Greenpeace" height="auto" src="https://via.placeholder.com/1200x400.png?text=1200x400+Retina+Image" style="border:none;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" title width="596">
                                 </a>
                               </td>
                             </tr>
@@ -218,6 +218,28 @@ Copy End */ -->
                         </table>
                       </td>
                     </tr>
+                  </tbody>
+                </table>
+              </div>
+              <!--[if mso | IE]></td></tr></table><![endif]-->
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <!--[if mso | IE]></td></tr></table><![endif]-->
+    <!-- /* End of Content Block 1a. Hero Image with border Start */ -->
+    <!-- /* Content Block 1. Hero Image Start */ -->
+    <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+    <div style="margin:0px auto;max-width:600px;">
+      <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
+        <tbody>
+          <tr>
+            <td style="border-left:1px lightgrey solid;border-right:1px lightgrey solid;direction:ltr;font-size:0px;padding:20px 0;padding-bottom:0px;padding-top:0px;text-align:center;">
+              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:598px;" ><![endif]-->
+              <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
+                  <tbody>
                     <tr>
                       <td align="center" style="font-size:0px;padding:10px 25px;padding-top:30px;padding-bottom:30px;word-break:break-word;">
                         <p style="border-top:solid 1px lightgrey;font-size:1px;margin:0px auto;width:100%;">
