--- a/Untitled.html
+++ b/Untitled.html
@@ -1530,6 +1530,54 @@ Copy + Img w/ CTA End */ -->
     </div>
     <!--[if mso | IE]></td></tr></table><![endif]-->
     <!-- /* Content Block 16. FR message End */ -->
+    <!-- /* Content Block 16.1. FR message Green BG Start */ -->
+    <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+    <div style="background:#ffffff;background-color:#ffffff;margin:0px auto;max-width:600px;">
+      <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#ffffff;background-color:#ffffff;width:100%;">
+        <tbody>
+          <tr>
+            <td style="border-left:1px lightgrey solid;border-right:1px lightgrey solid;direction:ltr;font-size:0px;padding:20px 0;padding-bottom:10px;padding-left:20px;padding-right:20px;padding-top:10px;text-align:center;">
+              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:558px;" ><![endif]-->
+              <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                  <tbody>
+                    <tr>
+                      <td style="background-color:#66cc00;vertical-align:top;padding:20px 12px;">
+                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style width="100%">
+                          <tbody>
+                            <tr>
+                              <td align="left" style="font-size:0px;padding:0px 20px 20px 20px;padding-bottom:0px;word-break:break-word;">
+                                <div style="font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:16px;line-height:1.5;text-align:left;color:#ffffff;">
+                                  <p>綠色和平與絕大部分非牟利組織不同，因為我們從不接受政府或企業的捐款，所有經費均來自公眾捐款。</p>
+                                </div>
+                              </td>
+                            </tr>
+                            <tr>
+                              <td align="center" vertical-align="middle" style="font-size:0px;padding:12px 20px;padding-top:12px;padding-bottom:8px;word-break:break-word;">
+                                <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:separate;line-height:100%;">
+                                  <tr>
+                                    <td align="center" bgcolor="#ff8100" role="presentation" style="border:none;border-radius:4px;cursor:auto;mso-padding-alt:12px 20px;background:#ff8100;" valign="middle">
+                                      <a href="https://www.greenpeace.org/eastasia/" style="display:inline-block;background:#ff8100;color:#ffffff;font-family:Roboto, Noto Sans TC, Arial, sans-serif;font-size:16px;font-weight:bold;line-height:1.5;margin:0;text-decoration:none;text-transform:none;padding:12px 20px;mso-padding-alt:0px;border-radius:4px;" target="_blank"> 捐助支持 </a>
+                                    </td>
+                                  </tr>
+                                </table>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <!--[if mso | IE]></td></tr></table><![endif]-->
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <!--[if mso | IE]></td></tr></table><![endif]-->
+    <!-- /* Content Block 16.1. FR message Green BG End */ -->
     <!-- /* Content Block 17. Suggested amount Start */ -->
     <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     <div style="background:#ffffff;background-color:#ffffff;margin:0px auto;max-width:600px;">
